--- a/_config.yml
+++ b/_config.yml
@@ -22,7 +22,7 @@ author_image: "/assets/images/author.jpg"
 
 paginate:	5
 
-url: "http://robertfeldt.github.io/mediator" # the base hostname & protocol for your site
+url: "http://robertfeldt.github.io/170617" # the base hostname & protocol for your site
 baseurl: ""
 #used to display twitter cards
 twitter_handle: '@drfeldt'
