fixed footer and added rf and am author image

--- a/_config.yml
+++ b/_config.yml
@@ -18,7 +18,7 @@ cover: "/assets/images/hs.png"
 
 name: 'Annamaria och Robert'
 author: 'Annamaria och Robert'
-author_image: "/assets/images/rf_author.jpg"
+author_image: "/assets/images/rf_and_am_at_sea.png"
 
 paginate:	5
 
