--- a/_config.yml
+++ b/_config.yml
@@ -10,7 +10,7 @@ description: > # this means to ignore newlines until "email:"
 
 email: annamaria.sundbye@gmail.com
 #blog logo
-logo: "/assets/images/ar_logo3.png"
+logo: "/assets/images/ar_logo3.jpg"
 float_logo: true # true, false (default)
 
 # blog cover
