added AM and RF pic, and fixed the https bug that caused top image problems

--- a/_config.yml
+++ b/_config.yml
@@ -22,7 +22,7 @@ author_image: "/assets/images/rf_and_am_at_sea.png"
 
 paginate:	10
 
-url: "http://robertfeldt.github.io/170617" # the base hostname & protocol for your site
+url: "https://robertfeldt.github.io/170617" # the base hostname & protocol for your site
 baseurl: ""
 #used to display twitter cards
 twitter_handle: '@drfeldt'
